fixed navbar styles for readability

--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -9,8 +9,11 @@
 
 .headerBannerTwo {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: flex-end;
+}
+
+.nav-list {
+    display: flex;
 }
 
 ul li {
@@ -18,4 +21,9 @@ ul li {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 20px;
+    margin-right: 10px;
+}
+ul li:hover {
+    color: rgba(255, 125, 4, 0.801);
+    cursor: pointer;
 }
